# OPMFlowGUI

./: .gitignore  LICENSE  README.md  pyproject.toml
opm_flow_gui/: __init__.py  main.py
opm_flow_gui/core/: __init__.py  case_manager.py  config.py  simulation_runner.py  summary_reader.py  wsl_utils.py
opm_flow_gui/gui/: __init__.py  case_panel.py  log_viewer.py  main_window.py  run_dialog.py  runs_panel.py  settings_dialog.py  styles.py  summary_panel.py  system_monitor.py
tests/: test_simulation_runner.py
